--- a/app/build.gradle
+++ b/app/build.gradle
@@ -57,11 +57,10 @@ android {
     dexOptions {
         javaMaxHeapSize "4g"
     }
-    dataBinding {
-        enabled = true
-    }
     sourceSets {
         main.java.srcDirs += 'src/main/kotlin'
+        test.java.srcDirs += 'src/test/kotlin'
+        androidTest.java.srcDirs += 'src/androidTest/kotlin'
     }
 }
 
@@ -89,7 +88,6 @@ dependencies {
     androidTestCompile "com.android.support:cardview-v7:$supportLib"
 
     compile "com.android.support.constraint:constraint-layout:$constraintLayout"
-    kapt "com.android.databinding:compiler:$androidPlugin"
 
     compile "android.arch.lifecycle:runtime:$androidArch"
     compile "android.arch.lifecycle:extensions:$androidArch"
