--- a/build.gradle
+++ b/build.gradle
@@ -2,7 +2,7 @@
 
 buildscript {
     ext {
-        kotlin = "1.1.4-3"
+        kotlin = "1.1.50"
         androidPlugin = "2.3.3"
     }
     repositories {
