--- a/mvvmredux/build.gradle
+++ b/mvvmredux/build.gradle
@@ -62,51 +62,39 @@ kapt {
 }
 
 dependencies {
-    compile fileTree(dir: 'libs', include: ['*.jar'])
-    androidTestCompile('com.android.support.test.espresso:espresso-core:2.2.2', {
+    api fileTree(dir: 'libs', include: ['*.jar'])
+    androidTestImplementation('com.android.support.test.espresso:espresso-core:2.2.2', {
         exclude group: 'com.android.support', module: 'support-annotations'
     })
 
-    testCompile "junit:junit:$junit"
+    testImplementation "junit:junit:$junit"
 
-    compile "com.android.support:support-v4:$supportLib"
-    compile "com.android.support:appcompat-v7:$supportLib"
-    compile "com.android.support:design:$supportLib"
-    compile "com.android.support:recyclerview-v7:$supportLib"
-    compile "com.android.support:cardview-v7:$supportLib"
-    androidTestCompile "com.android.support:support-v4:$supportLib"
-    androidTestCompile "com.android.support:appcompat-v7:$supportLib"
-    androidTestCompile "com.android.support:design:$supportLib"
-    androidTestCompile "com.android.support:recyclerview-v7:$supportLib"
-    androidTestCompile "com.android.support:cardview-v7:$supportLib"
-
-    compile "com.android.support.constraint:constraint-layout:$constraintLayout"
+    implementation "com.android.support:support-v4:$supportLib"
+    implementation "com.android.support:appcompat-v7:$supportLib"
+    androidTestImplementation "com.android.support:support-v4:$supportLib"
+    androidTestImplementation "com.android.support:appcompat-v7:$supportLib"
 
     /* RxJava related */
-    compile "io.reactivex.rxjava2:rxjava:$rxjava2"
-    compile "io.reactivex.rxjava2:rxkotlin:$rxkotlin2"
-    compile "io.reactivex.rxjava2:rxandroid:$rxandroid2"
-    compile "com.jakewharton.rxbinding2:rxbinding:$rxbinding2"
-    compile "com.jakewharton.rxbinding2:rxbinding-support-v4:$rxbinding2"
-    compile "com.jakewharton.rxbinding2:rxbinding-appcompat-v7:$rxbinding2"
-    compile "com.jakewharton.rxbinding2:rxbinding-design:$rxbinding2"
-    compile "com.jakewharton.rxbinding2:rxbinding-recyclerview-v7:$rxbinding2"
-    compile "com.trello.rxlifecycle2:rxlifecycle:$rxlifecycle2"
-    compile "com.trello.rxlifecycle2:rxlifecycle-android:$rxlifecycle2"
-    compile "com.trello.rxlifecycle2:rxlifecycle-android-lifecycle:$rxlifecycle2"
-    compile "com.trello.rxlifecycle2:rxlifecycle-kotlin:$rxlifecycle2"
-    compile "com.trello.rxlifecycle2:rxlifecycle-android-lifecycle-kotlin:$rxlifecycle2"
-    compile "com.tbruyelle.rxpermissions2:rxpermissions:$rxpermissions2"
-    compile "com.f2prateek.rx.preferences2:rx-preferences:$rxpreferences2"
+    implementation "io.reactivex.rxjava2:rxjava:$rxjava2"
+    implementation "io.reactivex.rxjava2:rxkotlin:$rxkotlin2"
+    implementation "io.reactivex.rxjava2:rxandroid:$rxandroid2"
+    implementation "com.jakewharton.rxbinding2:rxbinding:$rxbinding2"
+    implementation "com.jakewharton.rxbinding2:rxbinding-support-v4:$rxbinding2"
+    implementation "com.jakewharton.rxbinding2:rxbinding-appcompat-v7:$rxbinding2"
+    implementation "com.trello.rxlifecycle2:rxlifecycle:$rxlifecycle2"
+    implementation "com.trello.rxlifecycle2:rxlifecycle-android:$rxlifecycle2"
+    implementation "com.trello.rxlifecycle2:rxlifecycle-android-lifecycle:$rxlifecycle2"
+    implementation "com.trello.rxlifecycle2:rxlifecycle-kotlin:$rxlifecycle2"
+    implementation "com.trello.rxlifecycle2:rxlifecycle-android-lifecycle-kotlin:$rxlifecycle2"
 
 
-    compile "android.arch.lifecycle:runtime:$androidArch"
-    compile "android.arch.lifecycle:extensions:$androidArch"
+    implementation "android.arch.lifecycle:runtime:$androidArch"
+    implementation "android.arch.lifecycle:extensions:$androidArch"
     kapt "android.arch.lifecycle:compiler:$androidArch"
 
-    compile "org.jetbrains.kotlin:kotlin-stdlib-jre7:$kotlin"
-    compile "org.jetbrains.kotlin:kotlin-reflect:$kotlin"
-    testCompile "org.jetbrains.kotlin:kotlin-stdlib-jre7:$kotlin"
+    implementation "org.jetbrains.kotlin:kotlin-stdlib-jre7:$kotlin"
+    implementation "org.jetbrains.kotlin:kotlin-reflect:$kotlin"
+    testImplementation "org.jetbrains.kotlin:kotlin-stdlib-jre7:$kotlin"
 }
 
 publish {
