--- a/build.gradle
+++ b/build.gradle
@@ -29,7 +29,7 @@ allprojects {
         minSdk = 16
         buildTools = "27.0.3"
 
-        supportLib = "27.0.2"
+        supportLib = "27.1.0"
         googlePlay = "11.8.0"
         constraintLayout = "1.1.0-beta5"
 
@@ -44,8 +44,8 @@ allprojects {
         rxpermissions2 = "0.9.4@aar"
         rxpreferences2 = "2.0.0-RC3"
 
-        androidArch = "1.0.0"
-        room = androidArch
+        androidArch = "1.1.0"
+        room = "1.0.0"
 
         sampleVersionCode = 2
         sampleVersionName = "1.1.0"
