--- a/mvvmredux/build.gradle
+++ b/mvvmredux/build.gradle
@@ -89,7 +89,7 @@ dependencies {
 
 
     implementation "android.arch.lifecycle:runtime:$androidArch"
-    implementation "android.arch.lifecycle:extensions:$androidArch"
+    implementation "android.arch.lifecycle:viewmodel:$androidArch"
     kapt "android.arch.lifecycle:compiler:$androidArch"
 
     implementation "org.jetbrains.kotlin:kotlin-stdlib-jre7:$kotlin"
