--- a/mvvmredux-sample/build.gradle
+++ b/mvvmredux-sample/build.gradle
@@ -95,21 +95,20 @@ dependencies {
     androidTestImplementation "com.android.support:recyclerview-v7:$supportLib"
     androidTestImplementation "com.android.support:cardview-v7:$supportLib"
 
-    implementation "io.reactivex.rxjava2:rxjava:$rxjava2"
-    implementation "io.reactivex.rxjava2:rxkotlin:$rxkotlin2"
-    implementation "io.reactivex.rxjava2:rxandroid:$rxandroid2"
-    implementation "com.jakewharton.rxbinding2:rxbinding:$rxbinding2"
-    implementation "com.jakewharton.rxbinding2:rxbinding-support-v4:$rxbinding2"
-    implementation "com.jakewharton.rxbinding2:rxbinding-appcompat-v7:$rxbinding2"
-    implementation "com.trello.rxlifecycle2:rxlifecycle:$rxlifecycle2"
-    implementation "com.trello.rxlifecycle2:rxlifecycle-android:$rxlifecycle2"
-    implementation "com.trello.rxlifecycle2:rxlifecycle-android-lifecycle:$rxlifecycle2"
-    implementation "com.trello.rxlifecycle2:rxlifecycle-kotlin:$rxlifecycle2"
-    implementation "com.trello.rxlifecycle2:rxlifecycle-android-lifecycle-kotlin:$rxlifecycle2"
+    implementation "io.reactivex.rxjava2:rxjava:$rxJava2"
+    implementation "io.reactivex.rxjava2:rxkotlin:$rxKotlin2"
+    implementation "io.reactivex.rxjava2:rxandroid:$rxAndroid2"
+    implementation "com.jakewharton.rxbinding2:rxbinding:$rxBinding2"
+    implementation "com.jakewharton.rxbinding2:rxbinding-support-v4:$rxBinding2"
+    implementation "com.jakewharton.rxbinding2:rxbinding-appcompat-v7:$rxBinding2"
+    implementation "com.trello.rxlifecycle2:rxlifecycle:$rxLifecycle2"
+    implementation "com.trello.rxlifecycle2:rxlifecycle-android:$rxLifecycle2"
+    implementation "com.trello.rxlifecycle2:rxlifecycle-android-lifecycle:$rxLifecycle2"
+    implementation "com.trello.rxlifecycle2:rxlifecycle-kotlin:$rxLifecycle2"
+    implementation "com.trello.rxlifecycle2:rxlifecycle-android-lifecycle-kotlin:$rxLifecycle2"
 
     implementation "com.android.support.constraint:constraint-layout:$constraintLayout"
 
-    implementation "android.arch.lifecycle:runtime:$androidArch"
     implementation "android.arch.lifecycle:viewmodel:$androidArch"
     annotationProcessor "android.arch.lifecycle:compiler:$androidArch"
     kapt "android.arch.lifecycle:compiler:$androidArch"
