--- a/mvvmredux/build.gradle
+++ b/mvvmredux/build.gradle
@@ -82,7 +82,7 @@ dependencies {
     implementation "android.arch.lifecycle:viewmodel:$androidArch"
     kapt "android.arch.lifecycle:compiler:$androidArch"
 
-    implementation "org.jetbrains.kotlin:kotlin-stdlib-jre7:$kotlin"
+    implementation "org.jetbrains.kotlin:kotlin-stdlib-jdk7:$kotlin"
     implementation "org.jetbrains.kotlin:kotlin-reflect:$kotlin"
     testImplementation "org.jetbrains.kotlin:kotlin-stdlib-jre7:$kotlin"
 }
