--- a/mvvmredux-sample/build.gradle
+++ b/mvvmredux-sample/build.gradle
@@ -118,6 +118,6 @@ dependencies {
     testImplementation "android.arch.persistence.room:testing:$room"
     implementation "android.arch.persistence.room:rxjava2:$room"
 
-    implementation "org.jetbrains.kotlin:kotlin-stdlib-jre7:$kotlin"
-    testImplementation "org.jetbrains.kotlin:kotlin-stdlib-jre7:$kotlin"
+    implementation "org.jetbrains.kotlin:kotlin-stdlib-jdk7:$kotlin"
+    testImplementation "org.jetbrains.kotlin:kotlin-stdlib-jdk7:$kotlin"
 }
