--- a/mvvmredux/build.gradle
+++ b/mvvmredux/build.gradle
@@ -84,7 +84,7 @@ dependencies {
 
     implementation "org.jetbrains.kotlin:kotlin-stdlib-jdk7:$kotlin"
     implementation "org.jetbrains.kotlin:kotlin-reflect:$kotlin"
-    testImplementation "org.jetbrains.kotlin:kotlin-stdlib-jre7:$kotlin"
+    testImplementation "org.jetbrains.kotlin:kotlin-stdlib-jdk7:$kotlin"
 }
 
 publish {
