--- a/build.gradle
+++ b/build.gradle
@@ -2,8 +2,8 @@
 
 buildscript {
     ext {
-        kotlin = "1.2.41"
-        androidPlugin = "3.1.3"
+        kotlin = "1.2.61"
+        androidPlugin = "3.1.4"
         dexcount = "0.6.3"
         bintray = "0.8.0"
     }
@@ -30,20 +30,20 @@ allprojects {
         minSdk = 16
 
         supportLib = "27.1.1"
-        constraintLayout = "1.1.1"
+        constraintLayout = "1.1.3"
 
         junit = "4.12"
         espresso = "3.0.0"
 
-        rxJava2 = "2.1.12"
-        rxAndroid2 = "2.0.2"
-        rxKotlin2 = "2.2.0"
+        rxJava2 = "2.2.2"
+        rxAndroid2 = "2.1.0"
+        rxKotlin2 = "2.3.0"
         rxBinding2 = "2.1.1"
-        rxLifecycle2 = "2.2.1"
-        rxPermission2 = "0.9.5@aar"
+        rxLifecycle2 = "2.2.2"
+        rxPermission2 = "0.10.2"
 
         androidArch = "1.1.1"
-        room = "1.1.0"
+        room = "1.1.1"
 
         sampleVersionCode = 2
         sampleVersionName = "1.1.0"
@@ -57,9 +57,9 @@ allprojects {
                 project.property("java8_home") : System.getenv("JAVA8_HOME")
     }
     repositories {
+        google()
         jcenter()
         mavenCentral()
-        google()
         maven { url "https://jitpack.io" }
     }
 
