--- a/build.gradle
+++ b/build.gradle
@@ -5,6 +5,7 @@ buildscript {
         kotlin = "1.2.71"
         androidPlugin = "3.2.0"
         dexcount = "0.6.3"
+        androidMavenGradlePlugin = "2.1"
     }
     repositories {
         jcenter()
@@ -16,6 +17,7 @@ buildscript {
         classpath "org.jetbrains.kotlin:kotlin-gradle-plugin:$kotlin"
         classpath "org.jetbrains.kotlin:kotlin-android-extensions:$kotlin"
         classpath "com.getkeepsafe.dexcount:dexcount-gradle-plugin:$dexcount"
+        classpath "com.github.dcendents:android-maven-gradle-plugin:$androidMavenGradlePlugin"
     }
 }
 
@@ -47,7 +49,7 @@ allprojects {
         sampleVersionName = "1.1.0"
 
         libraryVersionCode = 2
-        libraryVersionName = "1.2.14"
+        libraryVersionName = "1.2.15"
 
         java7Home = project.hasProperty("java7_home") ?
                 project.property("java7_home") : System.getenv("JAVA7_HOME")
