--- a/mvvmredux-sample/build.gradle
+++ b/mvvmredux-sample/build.gradle
@@ -18,7 +18,7 @@ android {
         versionCode sampleVersionCode
         versionName sampleVersionName
         multiDexEnabled true
-        testInstrumentationRunner "android.support.test.runner.AndroidJUnitRunner"
+        testInstrumentationRunner "androidx.test.runner.AndroidJUnitRunner"
         applicationId "com.vulpeszerda.mvvmredux.sample"
 
         buildConfigField "String", "DATABASE_NAME", "\"todo_db\""
@@ -78,21 +78,21 @@ dependencies {
     api fileTree(dir: 'libs', include: ['*.jar'])
     api project(':mvvmredux')
 
-    implementation "com.android.support:support-v4:$supportLib"
-    implementation "com.android.support:appcompat-v7:$supportLib"
-    implementation "com.android.support:design:$supportLib"
-    implementation "com.android.support:recyclerview-v7:$supportLib"
-    implementation "com.android.support:cardview-v7:$supportLib"
-    testImplementation "com.android.support:support-v4:$supportLib"
-    testImplementation "com.android.support:appcompat-v7:$supportLib"
-    testImplementation "com.android.support:design:$supportLib"
-    testImplementation "com.android.support:recyclerview-v7:$supportLib"
-    testImplementation "com.android.support:cardview-v7:$supportLib"
-    androidTestImplementation "com.android.support:support-v4:$supportLib"
-    androidTestImplementation "com.android.support:appcompat-v7:$supportLib"
-    androidTestImplementation "com.android.support:design:$supportLib"
-    androidTestImplementation "com.android.support:recyclerview-v7:$supportLib"
-    androidTestImplementation "com.android.support:cardview-v7:$supportLib"
+    implementation 'androidx.legacy:legacy-support-v4:1.0.0'
+    implementation 'androidx.appcompat:appcompat:1.0.0'
+    implementation 'com.google.android.material:material:1.0.0'
+    implementation 'androidx.recyclerview:recyclerview:1.0.0'
+    implementation 'androidx.cardview:cardview:1.0.0'
+    testImplementation 'androidx.legacy:legacy-support-v4:1.0.0'
+    testImplementation 'androidx.appcompat:appcompat:1.0.0'
+    testImplementation 'com.google.android.material:material:1.0.0'
+    testImplementation 'androidx.recyclerview:recyclerview:1.0.0'
+    testImplementation 'androidx.cardview:cardview:1.0.0'
+    androidTestImplementation 'androidx.legacy:legacy-support-v4:1.0.0'
+    androidTestImplementation 'androidx.appcompat:appcompat:1.0.0'
+    androidTestImplementation 'com.google.android.material:material:1.0.0'
+    androidTestImplementation 'androidx.recyclerview:recyclerview:1.0.0'
+    androidTestImplementation 'androidx.cardview:cardview:1.0.0'
 
     implementation "io.reactivex.rxjava2:rxjava:$rxJava2"
     implementation "io.reactivex.rxjava2:rxkotlin:$rxKotlin2"
@@ -106,17 +106,17 @@ dependencies {
     implementation "com.trello.rxlifecycle2:rxlifecycle-kotlin:$rxLifecycle2"
     implementation "com.trello.rxlifecycle2:rxlifecycle-android-lifecycle-kotlin:$rxLifecycle2"
 
-    implementation "com.android.support.constraint:constraint-layout:$constraintLayout"
+    implementation 'androidx.constraintlayout:constraintlayout:2.0.0-alpha2'
 
-    implementation "android.arch.lifecycle:viewmodel:$androidArch"
-    annotationProcessor "android.arch.lifecycle:compiler:$androidArch"
-    kapt "android.arch.lifecycle:compiler:$androidArch"
+    implementation 'androidx.lifecycle:lifecycle-viewmodel:2.0.0'
+    annotationProcessor 'androidx.lifecycle:lifecycle-compiler:2.0.0'
+    kapt 'androidx.lifecycle:lifecycle-compiler:2.0.0'
 
     /* Room */
-    implementation "android.arch.persistence.room:runtime:$room"
-    kapt "android.arch.persistence.room:compiler:$room"
-    testImplementation "android.arch.persistence.room:testing:$room"
-    implementation "android.arch.persistence.room:rxjava2:$room"
+    implementation 'androidx.room:room-runtime:2.0.0'
+    kapt 'androidx.room:room-compiler:2.0.0'
+    testImplementation 'androidx.room:room-testing:2.0.0'
+    implementation 'androidx.room:room-rxjava2:2.0.0'
 
     implementation "org.jetbrains.kotlin:kotlin-stdlib-jdk7:$kotlin"
     testImplementation "org.jetbrains.kotlin:kotlin-stdlib-jdk7:$kotlin"
