Fixed wrong package change

--- a/mvvmredux/src/main/AndroidManifest.xml
+++ b/mvvmredux/src/main/AndroidManifest.xml
@@ -1,4 +1,4 @@
-<manifest package="com.github.vulpeszerda.mvvmreduxsample"
+<manifest package="com.github.vulpeszerda.mvvmredux"
 
     xmlns:android="http://schemas.android.com/apk/res/android">
 
