Updated AndroidStudio plugin

--- a/build.gradle
+++ b/build.gradle
@@ -3,7 +3,6 @@
 buildscript {
     ext {
         kotlin = "1.2.71"
-        androidPlugin = "3.2.0"
         dexcount = "0.6.3"
         androidMavenGradlePlugin = "2.1"
     }
@@ -13,7 +12,7 @@ buildscript {
         google()
     }
     dependencies {
-        classpath "com.android.tools.build:gradle:3.2.0"
+        classpath 'com.android.tools.build:gradle:3.2.1'
         classpath "org.jetbrains.kotlin:kotlin-gradle-plugin:$kotlin"
         classpath "org.jetbrains.kotlin:kotlin-android-extensions:$kotlin"
         classpath "com.getkeepsafe.dexcount:dexcount-gradle-plugin:$dexcount"
