--- a/build.gradle
+++ b/build.gradle
@@ -2,7 +2,7 @@
 
 buildscript {
     ext {
-        kotlin = "1.2.71"
+        kotlin = "1.3.21"
         dexcount = "0.6.3"
         androidMavenGradlePlugin = "2.1"
     }
@@ -12,7 +12,7 @@ buildscript {
         google()
     }
     dependencies {
-        classpath 'com.android.tools.build:gradle:3.2.1'
+        classpath 'com.android.tools.build:gradle:3.3.2'
         classpath "org.jetbrains.kotlin:kotlin-gradle-plugin:$kotlin"
         classpath "org.jetbrains.kotlin:kotlin-android-extensions:$kotlin"
         classpath "com.getkeepsafe.dexcount:dexcount-gradle-plugin:$dexcount"
@@ -28,6 +28,7 @@ allprojects {
         targetSdk = 28
         minSdk = 16
 
+        androidXappCompat = "1.0.2"
         supportLib = "1.0.0"
         constraintLayout = "2.0.0-alpha2"
 
@@ -35,9 +36,9 @@ allprojects {
         espresso = "3.0.0"
 
         rxJava2 = "2.2.2"
-        rxAndroid2 = "2.1.0"
+        rxAndroid2 = "2.1.1"
         rxKotlin2 = "2.3.0"
-        rxBinding2 = "2.1.1"
+        rxBinding2 = "2.2.0"
         rxLifecycle2 = "2.2.2"
         rxPermission2 = "0.10.2"
 
